# kohonen

./: CMakeLists.txt  CSOM.cpp  CSOM.hpp  CSOMNode.cpp  CSOMNode.hpp  GitParser.cpp  GitParser.hpp  Maintainer.cpp  Maintainer.hpp  Makefile  README  README~  config  const.hpp  d_list.xml  data.xml  funcs.cpp  funcs.hpp  git-parser.py  git_parser.cpp  main  main.cpp  som.cpp
